src/objects/Application3__c.object
<CustomObject>
    <fields>
        <fullName>Environment_Stewardship_CP__c</fullName>
        <description>This field is for Concept Paper type of Application.</description>
        <label>Environment Stewardship</label>
        <picklist>
            <picklistValues>
                <fullName>At-Risk Ecosystems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awareness &amp; Stewardship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy Efficiency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green Jobs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Environmental_Stewardship_Conservation_C__c</fullName>
        <description>This field is for Concept Paper type of Application.</description>
        <label>Environmental Stewardship &amp; Conservation</label>
        <picklist>
            <picklistValues>
                <fullName>At-Risk Ecosystems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awareness &amp; Stewardship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capacity Building &amp; Leverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engaging participants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individuals Assisted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NCCC Environment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Veterans &amp; Families Served</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Environmental_Stewardship_Conservation__c</fullName>
        <label>Environmental Stewardship &amp; Conservation</label>
        <picklist>
            <picklistValues>
                <fullName>Veterans &amp; Families Served</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NCCC Environment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engaging participants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individuals Assisted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>At-Risk Ecosystems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awareness &amp; Stewardship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capacity Building &amp; Leverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Environmental_Stewardship__c</fullName>
        <label>Environmental Stewardship</label>
        <picklist>
            <picklistValues>
                <fullName>At-Risk Ecosystems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awareness &amp; Stewardship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy Efficiency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green Jobs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Equipment_Tool_Requests_for_NCCC__c</fullName>
        <inlineHelpText>What equipment and tools are requested from the NCCC to supplement the local supply?</inlineHelpText>
        <label>Equipment &amp; Tool Requests for NCCC</label>
        <length>245</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equipment_Tool_Safety_Hazards__c</fullName>
        <inlineHelpText>Identify any safety hazards associated with the tools and equipment that will be used on the project. Provide details of any safety training provided.</inlineHelpText>
        <label>Equipment &amp; Tool Safety Hazards</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equipment_Tools_Storage_Provided__c</fullName>
        <inlineHelpText>What equipment, tools, and storage facilities will your organization provide?</inlineHelpText>
        <label>Equipment/Tools/Storage Provided</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Evaluation_Summary_or_Plan__c</fullName>
        <label>Evaluation Summary or Plan</label>
        <length>50000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Ex_Officer_Cost_Share__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ex. Officer Cost Share</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Applications8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Executive_Officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Executive Officer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Applications6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Executive_Summary1__c</fullName>
        <label>Executive Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Executive_Summary__c</fullName>
        <label>Executive Summary</label>
        <length>60000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FAPIIS_Review_Comments__c</fullName>
        <description>Field is Used for Final Decision Process of Application. 
US # 1783. KY</description>
        <label>FAPIIS Review Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fax_Number1__c</fullName>
        <label>Fax Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Fax_Number__c</fullName>
        <label>Fax Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Federal_Award_Identifier__c</fullName>
        <description>Federal Award Identifier</description>
        <inlineHelpText>Please enter Federal Award Identifier</inlineHelpText>
        <label>Federal Award Identifier</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Federal_Entity_Identifier__c</fullName>
        <description>Federal Entity Identifier</description>
        <inlineHelpText>Please enter Federal Entity Identifier</inlineHelpText>
        <label>Federal Entity Identifier</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Federal__c</fullName>
        <label>Federal</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Namee__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flag_for_ApplicationReturntoRework__c</fullName>
        <defaultValue>false</defaultValue>
        <description>checkbox for rendering clarification summary field when application status is return to rework</description>
        <label>Flag for ApplicationReturntoRework</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Focus_Area__c</fullName>
        <label>Focus Area</label>
        <picklist>
            <picklistValues>
                <fullName>Geographic Focus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Issue Focus</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Focus_Areas_and_Objectives__c</fullName>
        <label>Focus Areas and Objectives</label>
        <picklist>
            <picklistValues>
                <fullName>Economic Opportunity - Financial Literacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Veterans and Military Familes - Veterans and Families Served</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education - Other Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environmental Stewardship - At-Risk Ecosystem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Educations - School Readiness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthy Futures - Aging in Place</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Economic Opportunity - Employment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Economic Opportunity - Housing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disaster Services - Disaster Assistance Provided</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthy Futures - Obesity and Food</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthy Futures - Access to Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capacity Building - Capacity Building and Leverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Community Priorities - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education - K-12 Success</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Former_SPR_Code__c</fullName>
        <description>This field is shown when NCCC is checked on NOFA.</description>
        <label>Former SPR Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funded_by_AC_State_National_or_VISTA__c</fullName>
        <inlineHelpText>if this project is funded by AmeriCorps State &amp; National grant or any AmeriCorps VISTA resources. In the text box, provide detailed information concerning the funding source and utilization of those funds.&quot;</inlineHelpText>
        <label>Funded by</label>
        <picklist>
            <controllingField>If_your_org_currently_funded_by_CNCS__c</controllingField>
            <picklistValues>
                <fullName>AmeriCorps State &amp; National</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VISTA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Funding_Code_Application__c</fullName>
        <label>Funding Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funding_Code_ConceptPaper__c</fullName>
        <label>Funding Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funding_Opportunity_Title__c</fullName>
        <label>Funding Opportunity Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funding_Type__c</fullName>
        <inlineHelpText>&quot;Please identify if you have received funding in the past&quot;</inlineHelpText>
        <label>Funding History</label>
        <picklist>
            <picklistValues>
                <fullName>Never Received an AmeriCorps Grant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State Commission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State Formula</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Funds_available_for_contracted_labor_App__c</fullName>
        <description>Funds available for contracted labor? Added to Application Setup Section</description>
        <inlineHelpText>If “Yes,” was selected for “Could contracted labor be used?” does your organization currently have the resources to pay for contracted labor?</inlineHelpText>
        <label>Funds available for contracted labor?</label>
        <picklist>
            <controllingField>Could_contracted_labor_be_used_App_Setup__c</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Funds_available_for_contracted_labor_Con__c</fullName>
        <description>Funds available for contracted labor? Added to NOFO Concept Paper Section</description>
        <inlineHelpText>If “Yes,” was selected for “Could contracted labor be used?” does your organization currently have the resources to pay for contracted labor?</inlineHelpText>
        <label>Funds available for contracted labor?</label>
        <picklist>
            <controllingField>Could_contracted_labor_be_used_Concept__c</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Goals_Objectives_of_the_Project__c</fullName>
        <label>Goals/Objectives of the Project</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grant_Type__c</fullName>
        <label>Grant Type</label>
        <picklist>
            <picklistValues>
                <fullName>Competitive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-competitive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Grant_characteristics__c</fullName>
        <inlineHelpText>Check any grant characteristic(s) that apply to the proposed program</inlineHelpText>
        <label>Grant characteristics</label>
        <picklist>
            <picklistValues>
                <fullName>Encore Programs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Faith organizations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community-based organizations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SIG/Priority Schools</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Corps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STEM Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Geographic Focus-Urban</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Geographic Focus-Rural</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None of the above</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Grantee_Status__c</fullName>
        <label>Application Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold Pending Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Withdrawn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Return for Re-work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waitlisted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PO Approval/Denial Waitlist</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Grants_Officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Grants Officer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Applications4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Have_funding_history_with_any_CNCS_org_A__c</fullName>
        <description>This field is for Application. KY</description>
        <inlineHelpText>Has your organization been previously funded or resourced through CNCS?</inlineHelpText>
        <label>Have funding history with any CNCS org?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Have_funding_history_with_any_CNCS_org__c</fullName>
        <description>This field is for Concept Paper type of Application.</description>
        <inlineHelpText>Has your org been funded or resourced through any of CNCS Programs?</inlineHelpText>
        <label>Have resource history with any CNCS org?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Health_restrictions__c</fullName>
        <inlineHelpText>Are there any common health conditions that might preclude an NCCC member from fully participating based on project location or project conditions?</inlineHelpText>
        <label>Health restrictions</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Healthy_Futures_CP__c</fullName>
        <label>Healthy Futures</label>
        <picklist>
            <picklistValues>
                <fullName>Access to Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aging in Place</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Obesity and Food</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Healthy_Futures__c</fullName>
        <label>Healthy Futures</label>
        <picklist>
            <picklistValues>
                <fullName>Access to Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aging in Place</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Obesity &amp; Food</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Housing_End_Date__c</fullName>
        <label>Housing End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Housing_Start_Date__c</fullName>
        <label>Housing Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Housing_Street_Address__c</fullName>
        <label>Housing Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Housing_Type__c</fullName>
        <label>Housing Type</label>
        <picklist>
            <picklistValues>
                <fullName>church</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>house</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>apartment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>camp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_Will_Project_Meet_These_Needs__c</fullName>
        <inlineHelpText>Describe how the proposed project will help to meet these needs. What will be the final outcome(s) of services provided?</inlineHelpText>
        <label>How Will Project Meet These Needs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>How_many_teams_are_being_requested_App__c</fullName>
        <description>How many teams are being requested? Added to Application Setup Section.</description>
        <label>How many teams are being requested?</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_many_teams_are_being_requested_CP__c</fullName>
        <description>This field is for Concept Paper type of Application.</description>
        <label>How many teams are being requested?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>How_many_teams_are_being_requested_Con__c</fullName>
        <description>How many teams are being requested? Added to Nofo concept paper section</description>
        <label>How many teams are being requested?</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
                <default>true</default>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_many_teams_are_being_requested__c</fullName>
        <label>Number of teams to complete this project</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>How_many_weeks_will_it_take_to_complete__c</fullName>
        <label>Number of Weeks to Complete Project</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>How_project_will_meet_community_needs__c</fullName>
        <inlineHelpText>Describe how the proposed project will help to meet these needs. What will be the final outcome(s) of services provided?</inlineHelpText>
        <label>How project will meet community needs?</label>
        <length>256</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>IRS_Certificiation_of_Non_Profit_Status__c</fullName>
        <label>IRS Certificiation of Non-Profit Status</label>
        <picklist>
            <picklistValues>
                <fullName>Already on a file at CNCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent for now until Attachment POC is ready</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>I_Agree__c</fullName>
        <defaultValue>false</defaultValue>
        <label>I Agree</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Identify_communication_access_methods__c</fullName>
        <inlineHelpText>Identify available phones, fax, computer or internet access that can be made available to the team for official team business and project-related purposes.</inlineHelpText>
        <label>Primary Work Site Communication</label>
        <length>256</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Identify_program_operating_site_s__c</fullName>
        <description>This field is for Notification of Intent to Apply.</description>
        <label>Identify program operating site(s)</label>
        <picklist>
            <picklistValues>
                <fullName>In only one state</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In two or more states</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A territory without a service commission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (please specify)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Identify_the_pop_the_program_will_serve__c</fullName>
        <inlineHelpText>Select the populations the proposed program will serve. If you do not plan to serve any of the listed populations, select &quot;None&quot;</inlineHelpText>
        <label>Identify the pop. the program will serve</label>
        <picklist>
            <picklistValues>
                <fullName>Disaster Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Economic Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environment 21st Century Service Corps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Veterans and  Military Families</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Governor and Mayor Initiative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi-focus Intermediary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthy State &amp; School Ready to Learn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reading at Grade Level by Third Grade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High School Ready for College &amp; Career</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Successfully Entering the Workforce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Keeping Kids on Track/Giving 2nd Chances</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>If_No_please_specify__c</fullName>
        <label>If No, please specify</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>If_Yes_Please_Explain_Applicant_Deliquen__c</fullName>
        <description>Field is shown when NCCC is checked on NOFA.</description>
        <label>If Yes, Please Explain</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>If_Yes_Please_Explain_EO_12372__c</fullName>
        <description>Field is shown when NCCC is checked on NOFA. KY</description>
        <label>If Yes, Please Explain</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>If_Yes_please_specifyanyadditional__c</fullName>
        <label>If ‘Yes’, please specify</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_Yes_please_specifyanypossible__c</fullName>
        <inlineHelpText>If ‘Yes’, please provide required documentation to ensure the project meets OSHA standards as related to asbestos, lead paint, lead removal, hazardous waste, and other potential safety hazards.</inlineHelpText>
        <label>If ‘Yes’, please specify</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_Yes_please_specifysecurity__c</fullName>
        <label>If ‘Yes’, please specify</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_Yes_please_specifystatenationalvista__c</fullName>
        <label>If ‘Yes’, please specify</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_Yes_provide_your_explination_here__c</fullName>
        <label>If &quot;Yes&quot;, provide your explanation here</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_other_please_specify_Economic__c</fullName>
        <inlineHelpText>If you selected Other Economic Opportunity, please specify in the text box</inlineHelpText>
        <label>If other, please specify</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_other_please_specify_Energy__c</fullName>
        <inlineHelpText>If you selected Other Energy Conservation, please specify in the text box</inlineHelpText>
        <label>If other, please specify</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_other_please_specify_Enivironment_Ste__c</fullName>
        <inlineHelpText>If you selected Other Environmental Stewardship, please specify in the text box</inlineHelpText>
        <label>If other, please specify</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_other_please_specify_Enivronment__c</fullName>
        <inlineHelpText>If you selected Other Environmental Stewardship, please specify in the text box</inlineHelpText>
        <label>If other, please specify</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_other_please_specify_Health__c</fullName>
        <inlineHelpText>If you selected Other Healthy Futures, please specify in the text box</inlineHelpText>
        <label>If other, please specify</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_other_please_specify_Infrastructure__c</fullName>
        <inlineHelpText>If you selected Other Infrastructure Improvement, please specify in the text box</inlineHelpText>
        <label>If other, please specify</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_other_please_specify_Urban__c</fullName>
        <inlineHelpText>If you selected Other Urban and Rural Development, please specify in the text box</inlineHelpText>
        <label>If other, please specify</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_other_please_specify_Veterns__c</fullName>
        <inlineHelpText>If you selected Other Veterans and Military Families, please specify in the text box</inlineHelpText>
        <label>If other, please specify</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_other_please_specify_capacity__c</fullName>
        <inlineHelpText>If you selected Other Capacity Building, please specify in the text box</inlineHelpText>
        <label>If other, please specify</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_other_please_specify_disaster__c</fullName>
        <inlineHelpText>If you selected Other Disaster Services, please specify in the text box</inlineHelpText>
        <label>If other, please specify</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_other_please_specify_education__c</fullName>
        <inlineHelpText>If you selected Other Education, please specify in the text box</inlineHelpText>
        <label>If other, please specify</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_yes_please_specifydiffcult__c</fullName>
        <label>If yes, please specify</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_yes_please_specifyhealthrestrictions__c</fullName>
        <label>If yes, please specify&quot;</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>